--- a/entry.html
+++ b/entry.html
@@ -63,6 +63,7 @@
             font-size: 1em;
             background: #333;
             color: var(--color-text);
+            font-family: 'Press Start 2P', Arial, monospace;
         }
 
         .auth-container input[type="submit"] {
@@ -77,6 +78,7 @@
             text-transform: uppercase;
             letter-spacing: 0.1em;
             transition: background 0.3s;
+            font-family: 'Press Start 2P', Arial, monospace;
         }
 
         .auth-container input[type="submit"]:hover {
@@ -87,8 +89,9 @@
             color: var(--color-sub);
             text-decoration: none;
             font-size: 0.9em;
-            margin-top: 10px;
+            margin-top: 20px; /* Увеличено, чтобы добавить пространство */
             display: inline-block;
+            font-family: 'Press Start 2P', Arial, monospace;
         }
 
         .auth-container a:hover {
